# denoisr

./: .env.example  .gitignore  CLAUDE.md  README.md  config.toml  main.py  pipeline.toml  pyproject.toml
docs/plans/: 2026-02-19-chess-gui-design.md  2026-02-19-chess-gui-implementation.md  2026-02-19-component-decomposition-design.md  2026-02-19-foundation-implementation.md  2026-02-19-neural-networks-implementation.md  2026-02-19-phase1-training-improvements-design.md  2026-02-19-phase1-training-improvements.md  2026-02-19-training-inference-implementation.md  2026-02-20-cuda-mlx-optimization-design.md  2026-02-20-cuda-mlx-optimization.md  2026-02-20-grokking-detection-design.md  2026-02-20-grokking-detection.md  2026-02-20-gui-ux-polish-design.md  2026-02-20-gui-ux-polish.md  2026-02-20-phase1-optimization-design.md  2026-02-20-phase1-optimization.md  2026-02-20-phase2-completion-design.md  2026-02-20-phase2-completion.md  2026-02-20-resource-metrics-design.md  2026-02-20-resource-metrics.md  2026-02-20-training-logging-design.md  2026-02-20-training-logging.md  2026-02-21-benchmark-overhaul-design.md  2026-02-21-benchmark-overhaul.md  2026-02-21-phase1-pipeline-overhaul-design.md  2026-02-21-phase1-pipeline-overhaul.md  2026-02-21-v-prediction-dpm-solver-design.md  2026-02-21-v-prediction-dpm-solver.md  2026-02-22-binary-sort-design.md  2026-02-22-binary-sort.md  2026-02-22-pipeline-scheduler-design.md  2026-02-22-pipeline-scheduler.md  2026-02-28-phase1-training-enhancements-design.md  2026-02-28-phase1-training-enhancements.md  2026-03-03-fail-fast-audit-design.md  2026-03-03-fail-fast-audit.md
fixtures/: sample_games.pgn
tests/: conftest.py
tests/test_common/: test_interrupts.py  test_runtime.py
tests/test_crypto/: test_execution_pipeline.py
tests/test_data/: test_action_encoder.py  test_board_encoder.py  test_dataset.py  test_extended_board_encoder.py  test_game_format.py  test_holdout_splitter.py  test_pgn_streamer.py  test_stockfish_oracle.py
tests/test_engine/: mock_engine.py  test_elo.py  test_engine_types.py  test_match_engine.py  test_openings.py  test_uci_engine.py
tests/test_evaluation/: test_analyzer.py  test_benchmark.py  test_pgn_writer.py
tests/test_game/: test_chess_game.py
tests/test_gui/: mock_engine.py  test_app_helpers.py  test_board_widget.py  test_elo.py  test_gui_types.py  test_match_engine.py  test_uci_engine.py
tests/test_inference/: test_diffusion_engine.py  test_engine.py  test_mlx_export.py  test_uci.py
tests/test_integration/: test_cuda_optimizations.py  test_enhancements_smoke.py
tests/test_nn/: test_consistency.py  test_diffusion.py  (+8 more)
(+202 files in other folders)
