[project]
name = "denoisr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chess>=1.11.2",
    "numpy>=2.4.2",
    "nvidia-ml-py3>=7.352.0",
    "psutil>=7.2.2",
    "safetensors>=0.7.0",
    "tensorboard>=2.20.0",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "zstandard>=0.25.0",
]

[project.scripts]
denoisr-init = "denoisr.scripts.init_model:main"
denoisr-generate-data = "denoisr.scripts.generate_data:main"
denoisr-train-phase1 = "denoisr.scripts.train_phase1:main"
denoisr-train-phase2 = "denoisr.scripts.train_phase2:main"
denoisr-train-phase3 = "denoisr.scripts.train_phase3:main"
denoisr-play = "denoisr.scripts.play:main"
denoisr-benchmark = "denoisr.scripts.benchmark:main"
denoisr-export-mlx = "denoisr.scripts.export_mlx:main"
denoisr-gui = "denoisr.scripts.gui:main"
denoisr-sort-pgn = "denoisr.scripts.sort_pgn:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/denoisr"]

[tool.pytest.ini_options]
pythonpath = ["tests"]

[dependency-groups]
dev = [
    "hypothesis>=6.151.9",
    "pytest>=9.0.2",
    "pytest-xdist>=3.8.0",
    "types-tqdm>=4.67.3.20260205",
]
