[project]
name = "denoisr-workspace"
version = "0.1.0"
description = "Workspace root for the Denoisr chess and crypto projects"
requires-python = ">=3.14"
classifiers = ["Private :: Do Not Upload"]
dependencies = [
    "denoisr-common",
    "denoisr-chess",
    "denoisr-crypto",
]

[tool.uv.sources]
denoisr-common = { workspace = true }
denoisr-chess = { workspace = true }
denoisr-crypto = { workspace = true }

[tool.uv.workspace]
members = [
    "packages/common",
    "packages/chess",
    "packages/crypto",
]

[tool.pytest.ini_options]
pythonpath = ["tests"]

[dependency-groups]
dev = [
    "hypothesis>=6.151.9",
    "pytest>=9.0.2",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.5",
    "types-tqdm>=4.67.3.20260303",
]
